# verify_citations

./: LICENSE  README.md  pr-crossref-doi-search.md  pyproject.toml  requirements.txt
examples/: sample.bib
tests/: test_doi_crossref.py  test_mismatch_details.py  test_verifier.py
verify_citations/: __init__.py  cli.py  parser.py  verifier.py
