[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "verify-citations"
version = "0.1.0"
description = "A CLI utility to verify citations in BibTeX files"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Vishakh PK"}
]
dependencies = [
    "bibtexparser>=1.4.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
]

[project.scripts]
verify-citations = "verify_citations.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["verify_citations*"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests that require network access (deselect with '-m \"not integration\"')",
]
